# RtmpSdk

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: rtmp_client.h  status.h  utils.h
src/: rtmp_client.cpp
